--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "ws": "^8.17.0",
-    "dotenv": "^16.4.5"
+    "twilio": "^5.3.0",
+    "ws": "^8.17.0"
   }
 }
